fix: mobile UI and other fixes (#10177)
* remove legacy openMenu=shape state and unused actions

* close menus/popups in applicable cases when opening a different one

* split ui z-indexes to account prefer different overlap

* make top canvas area clickable on mobile

* make mobile main menu closable by clicking outside and reduce width

* offset picker popups from viewport border on mobile

* reduce items gap in mobile main menu

* show top picks for canvas bg colors in all ui modes

* fix menu separator visibility on mobile

* fix command palette items not being filtered

--- a/packages/excalidraw/components/dropdownMenu/DropdownMenu.scss
+++ b/packages/excalidraw/components/dropdownMenu/DropdownMenu.scss
@@ -5,6 +5,7 @@
     position: absolute;
     top: 2.5rem;
     margin-top: 0.5rem;
+    max-width: 16rem;
 
     &--placement-top {
       top: auto;
@@ -20,10 +21,8 @@
       // When main menu is in the top toolbar, position relative to trigger
       &.main-menu-dropdown {
         min-width: 232px;
-        max-width: calc(100vw - var(--editor-container-padding) * 2);
         margin-top: 0;
         margin-bottom: 0;
-        z-index: var(--zIndex-layerUI);
 
         @media screen and (orientation: landscape) {
           max-width: 232px;
